Bug 661035 - Print frame script errors to stdout. r=smaug